Save submission results as HTML and XSLX.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -2568,156 +2568,204 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "division = 'closed'\n",
     "submitter = 'dividiti'\n",
     "scenario = 'singlestream'\n",
     "\n",
-    "path = '/home/anton/projects/mlperf/'\n",
-    "results_dir = os.path.join(path, 'submissions_inference_0_5', division, submitter, 'results')\n",
-    "systems_dir = os.path.join(path, 'submissions_inference_0_5', division, submitter, 'systems')\n",
-    "\n",
     "results = []\n",
     "dfs = []\n",
-    "for system in os.listdir(results_dir):\n",
-    "    if system=='compliance_checker_log.txt': continue    \n",
-    "    system_dir = os.path.join(results_dir, system)\n",
-    "    with open(os.path.join(systems_dir, system+'.json')) as system_file:\n",
-    "        system_json = json.load(system_file)\n",
-    "#         pprint(system_json)\n",
-    "    for benchmark in os.listdir(system_dir):\n",
-    "        if benchmark=='compliance_checker_log.txt': continue    \n",
-    "        benchmark_dir = os.path.join(system_dir, benchmark)\n",
-    "        # TODO: Iterate over scenarios.\n",
-    "        scenario = 'singlestream'\n",
-    "        experiment_dir = os.path.join(benchmark_dir, scenario)\n",
-    "        # Extract accuracy in percent.\n",
-    "        accuracy_dir = os.path.join(experiment_dir, 'accuracy')\n",
-    "        with open(os.path.join(accuracy_dir, 'accuracy.txt'), 'r') as accuracy_file:\n",
-    "            accuracy_txt = accuracy_file.readlines()\n",
-    "            accuracy_line = accuracy_txt[-1]\n",
-    "        if accuracy_line.startswith('mAP'):\n",
-    "            task = 'object-detection'\n",
-    "            match = re.match('mAP\\=([\\d\\.]+)\\%', accuracy_line)\n",
-    "            accuracy_pc = float(match.group(1))\n",
-    "        elif accuracy_line.startswith('accuracy'):\n",
-    "            task = 'image-classification'\n",
-    "            match = re.match('accuracy=(.+)%, good=(\\d+), total=(\\d+)', accuracy_line)\n",
-    "            accuracy_pc = float(match.group(1))\n",
-    "        # Extract 90th percentile.\n",
-    "        performance_dir = os.path.join(experiment_dir, 'performance', 'run_1')\n",
-    "        with open(os.path.join(performance_dir, 'mlperf_log_summary.txt'), 'r') as summary_file:\n",
-    "            summary_txt = summary_file.readlines()\n",
-    "            time_ns = int(summary_txt[6].split(':')[1].strip())\n",
-    "            time_ms = time_ns * 1e-6\n",
-    "        benchmark_dict = object_detection_benchmarks.get(benchmark)\n",
-    "        if benchmark_dict:\n",
-    "            width = benchmark_dict['width']\n",
-    "            height = benchmark_dict['height']\n",
-    "        else:\n",
-    "            if benchmark.endswith('96'):\n",
-    "                side = 96\n",
-    "            elif benchmark.endswith('128'):\n",
-    "                side = 128\n",
-    "            elif benchmark.endswith('160'):\n",
-    "                side = 160\n",
-    "            elif benchmark.endswith('192'):\n",
-    "                side = 192\n",
+    "path = '/home/anton/projects/mlperf/'\n",
+    "for division in [ 'closed', 'open' ]:\n",
+    "    results_dir = os.path.join(path, 'submissions_inference_0_5', division, submitter, 'results')\n",
+    "    systems_dir = os.path.join(path, 'submissions_inference_0_5', division, submitter, 'systems')\n",
+    "    \n",
+    "    for system in os.listdir(results_dir):\n",
+    "        if system=='compliance_checker_log.txt': continue    \n",
+    "        system_dir = os.path.join(results_dir, system)\n",
+    "        system_json_name = system+'.json'\n",
+    "        with open(os.path.join(systems_dir, system_json_name)) as system_json_file:\n",
+    "            system_json = json.load(system_json_file)\n",
+    "    #         pprint(system_json)\n",
+    "        for benchmark in os.listdir(system_dir):\n",
+    "            if benchmark=='compliance_checker_log.txt': continue    \n",
+    "            benchmark_dir = os.path.join(system_dir, benchmark)\n",
+    "            # TODO: Iterate over scenarios.\n",
+    "            scenario = 'singlestream'\n",
+    "            experiment_dir = os.path.join(benchmark_dir, scenario)\n",
+    "            # Extract accuracy in percent.\n",
+    "            accuracy_dir = os.path.join(experiment_dir, 'accuracy')\n",
+    "            with open(os.path.join(accuracy_dir, 'accuracy.txt'), 'r') as accuracy_file:\n",
+    "                accuracy_txt = accuracy_file.readlines()\n",
+    "                accuracy_line = accuracy_txt[-1]\n",
+    "            if accuracy_line.startswith('mAP'):\n",
+    "                task = 'object-detection'\n",
+    "                match = re.match('mAP\\=([\\d\\.]+)\\%', accuracy_line)\n",
+    "                accuracy_pc = float(match.group(1))\n",
+    "            elif accuracy_line.startswith('accuracy'):\n",
+    "                task = 'image-classification'\n",
+    "                match = re.match('accuracy=(.+)%, good=(\\d+), total=(\\d+)', accuracy_line)\n",
+    "                accuracy_pc = float(match.group(1))\n",
+    "            # Extract 90th percentile.\n",
+    "            performance_dir = os.path.join(experiment_dir, 'performance', 'run_1')\n",
+    "            with open(os.path.join(performance_dir, 'mlperf_log_summary.txt'), 'r') as summary_file:\n",
+    "                summary_txt = summary_file.readlines()\n",
+    "                time_ns = int(summary_txt[6].split(':')[1].strip())\n",
+    "                time_ms = time_ns * 1e-6\n",
+    "            benchmark_dict = object_detection_benchmarks.get(benchmark)\n",
+    "            if benchmark_dict:\n",
+    "                width = benchmark_dict['width']\n",
+    "                height = benchmark_dict['height']\n",
     "            else:\n",
-    "                side = 224\n",
-    "            width = side\n",
-    "            height = side\n",
+    "                if benchmark.endswith('96'):\n",
+    "                    side = 96\n",
+    "                elif benchmark.endswith('128'):\n",
+    "                    side = 128\n",
+    "                elif benchmark.endswith('160'):\n",
+    "                    side = 160\n",
+    "                elif benchmark.endswith('192'):\n",
+    "                    side = 192\n",
+    "                else:\n",
+    "                    side = 224\n",
+    "                width = side\n",
+    "                height = side\n",
     "\n",
-    "        task_to_str = {\n",
-    "            'image-classification' : 'Image Classification',\n",
-    "            'object-detection' : 'Object Detection',\n",
-    "        }\n",
-    "            \n",
-    "        result = '{},{},{},{},{},'.format(division,task_to_str[task],submitter,system_json['system_name'],benchmark)\n",
-    "        if task=='image-classification':\n",
-    "            result += '{:.01f},,'.format(time_ms)\n",
-    "            result += '{:.03f},,'.format(accuracy_pc)\n",
-    "        elif task=='object-detection':\n",
-    "            result += ',{:.01f},'.format(time_ms)\n",
-    "            result += ',{:.03f},'.format(accuracy_pc)\n",
-    "\n",
-    "        system_list = system.split('-')\n",
-    "        # Processor (CPU).\n",
-    "        hostname_to_processor = {\n",
-    "            'velociti'  : 'Intel Xeon CPU E5-2650 v3',\n",
-    "            'firefly'   : 'Rockchip RK3399',\n",
-    "            'hikey960'  : 'HiSilicon Kirin960',\n",
-    "            'mate10pro' : 'HiSilicon Kirin970',\n",
-    "            'rpi4'      : 'Broadcom BCM2711B0',\n",
-    "        }\n",
-    "        processor = hostname_to_processor[system_list[0]]\n",
-    "        processor_num = system_json['host_processors_per_node']\n",
-    "        # Accelerator.\n",
-    "        accelerator = system_json['accelerator_model_name']\n",
-    "        accelerator_num = system_json['accelerators_per_node']\n",
-    "        # Software (framework).\n",
-    "        software = system_json['framework']\n",
-    "        \n",
-    "        notes = '{} ({}x{})'.format(benchmark, width, height)\n",
-    "\n",
-    "        result += '{},{},{},{},{},{}'.format(processor, processor_num, accelerator, accelerator_num, software, notes)\n",
-    "\n",
-    "        results.append(result)\n",
-    "\n",
-    "        scenario_to_str = {\n",
-    "            'singlestream': 'SingleStream',\n",
-    "            'multistream': 'MultiStream',\n",
-    "            'server': 'Server',\n",
-    "            'offline': 'Offline',\n",
-    "        }\n",
-    "        \n",
-    "        # Visualize.\n",
-    "        data = [\n",
-    "            {\n",
-    "                'Division': division, # TODO: ID.\n",
-    "                'Task': task_to_str[task],\n",
-    "                'Submitter': submitter,\n",
-    "                'System': system_json['system_name'], \n",
-    "                'Benchmark': benchmark,\n",
-    "                'Scenario': scenario_to_str[scenario],\n",
-    "                'IC: Time (ms)': '{:.01f}'.format(time_ms) if task=='image-classification' else '',\n",
-    "                'IC: Accuracy (top1 %)': '{:.03f}'.format(accuracy_pc) if task=='image-classification' else '',\n",
-    "                'OD: Time (ms)': '{:.01f}'.format(time_ms) if task=='object-detection' else '',\n",
-    "                'OD: Accuracy (mAP %)': '{:.03f}'.format(accuracy_pc) if task=='object-detection' else '',\n",
-    "#                 'Processor': processor,\n",
-    "#                 'Processor #': processor_num,\n",
-    "#                 'Accelerator': accelerator,\n",
-    "#                 'Accelerator #': accelerator_num,\n",
-    "#                 'Software': software,\n",
-    "#                 'Notes': notes\n",
+    "            task_to_str = {\n",
+    "                'image-classification' : 'Image Classification',\n",
+    "                'object-detection' : 'Object Detection',\n",
     "            }\n",
-    "            # for (repetition_id, characteristics) in ip(range(num_repetitions), characteristics_list)\n",
-    "        ]\n",
-    "        index = [\n",
-    "            'Division', 'Task', 'Submitter', 'Benchmark', 'System', 'Scenario'\n",
-    "        ]\n",
-    "        # Construct a DataFrame.\n",
-    "        df = pd.DataFrame(data)\n",
-    "        df = df.set_index(index)\n",
-    "        # Append to the list of similarly constructed DataFrames.\n",
-    "        dfs.append(df)\n",
-    "    if dfs:\n",
-    "        # Concatenate all thus constructed DataFrames (i.e. stack on top of each other).\n",
-    "        df = pd.concat(dfs)\n",
-    "        df.sort_index(ascending=True, inplace=True)\n",
     "\n",
-    "df['ID'] = df.reset_index().index\n",
-    "new_index = ['ID'] + index\n",
+    "            result = '{},{},{},{},{},'.format(division,task_to_str[task],submitter,system_json['system_name'],benchmark)\n",
+    "            if task=='image-classification':\n",
+    "                result += '{:.01f},,'.format(time_ms)\n",
+    "                result += '{:.03f},,'.format(accuracy_pc)\n",
+    "            elif task=='object-detection':\n",
+    "                result += ',{:.01f},'.format(time_ms)\n",
+    "                result += ',{:.03f},'.format(accuracy_pc)\n",
+    "\n",
+    "            system_list = system.split('-')\n",
+    "            # Processor (CPU).\n",
+    "            hostname_to_processor = {\n",
+    "    #             'velociti'  : 'Intel Xeon CPU E5-2650 v3',\n",
+    "                'firefly'   : 'Rockchip RK3399',\n",
+    "                'hikey960'  : 'HiSilicon Kirin960',\n",
+    "                'mate10pro' : 'HiSilicon Kirin970',\n",
+    "                'rpi4'      : 'Broadcom BCM2711B0',\n",
+    "            }\n",
+    "            processor = hostname_to_processor.get(system_list[0], system_json['host_processor_model_name'])\n",
+    "            processor_num = system_json['host_processors_per_node']\n",
+    "            # Accelerator.\n",
+    "            accelerator = system_json['accelerator_model_name']\n",
+    "            accelerator_num = system_json['accelerators_per_node']\n",
+    "            # Software (framework).\n",
+    "            software = system_json['framework']\n",
+    "            # Model (WidthxHeight).\n",
+    "            notes = '{} ({}x{})'.format(benchmark, width, height)\n",
+    "            # All together.\n",
+    "            result += '{},{},{},{},{},{}'.format(processor, processor_num, accelerator, accelerator_num, software, notes)\n",
+    "            results.append(result)\n",
+    "\n",
+    "            # Maps for DataFrame construction.\n",
+    "            scenario_to_str = {\n",
+    "                'singlestream': 'SingleStream',\n",
+    "                'multistream': 'MultiStream',\n",
+    "                'server': 'Server',\n",
+    "                'offline': 'Offline',\n",
+    "            } \n",
+    "            benchmark_to_str = {\n",
+    "                'mobilenet': 'MobileNet',\n",
+    "                'resnet': 'ResNet'\n",
+    "            }\n",
+    "\n",
+    "            # Prepare DataFrame data and index.\n",
+    "            data = [\n",
+    "                {\n",
+    "                    'Division': division,\n",
+    "                    'Category': system_json['status'],\n",
+    "                    'Task': task_to_str[task],\n",
+    "                    'Submitter': submitter,\n",
+    "                    'System': system_json['system_name'], \n",
+    "                    'Benchmark': benchmark_to_str.get(benchmark, benchmark),\n",
+    "                    'Scenario': scenario_to_str[scenario],\n",
+    "                    'IC/SS: Time (ms)': '{:.01f}'.format(time_ms) if task=='image-classification' and scenario=='singlestream' else '',\n",
+    "                    'IC/SS: Accuracy (Top1 %)': '{:.03f}'.format(accuracy_pc) if task=='image-classification' and scenario=='singlestream' else '',\n",
+    "                    'OD/SS: Time (ms)': '{:.01f}'.format(time_ms) if task=='object-detection' and scenario=='singlestream' else '',\n",
+    "                    'OD/SS: Accuracy (mAP %)': '{:.03f}'.format(accuracy_pc) if task=='object-detection' and scenario=='singlestream' else '',\n",
+    "                    'Processor': processor,\n",
+    "                    'Processor #': processor_num,\n",
+    "                    'Accelerator': accelerator,\n",
+    "                    'Accelerator #': accelerator_num if accelerator_num != '0' else '-',\n",
+    "                    'Software': software,\n",
+    "                    'Details' : 'https://github.com/mlperf/submissions_inference_0_5/blob/master/{}/{}/systems/{}'. \\\n",
+    "                                format(division, submitter, system_json_name),\n",
+    "                    'Code'    : 'https://github.com/mlperf/submissions_inference_0_5/tree/master/{}/{}/code/{}'. \\\n",
+    "                                format(division, submitter, benchmark),\n",
+    "                    'Notes': '{} ({}x{})'.format(benchmark_to_str.get(benchmark, benchmark), width, height)\n",
+    "                }\n",
+    "                # for (repetition_id, characteristics) in ip(range(num_repetitions), characteristics_list)\n",
+    "            ]\n",
+    "            index = [\n",
+    "                'Division', 'Category', 'Submitter', 'System', 'Task', 'Benchmark', 'Scenario', 'Software'\n",
+    "            ]\n",
+    "            # Construct a DataFrame.\n",
+    "            df = pd.DataFrame(data)\n",
+    "            df = df.set_index(index)\n",
+    "            # Append to the list of similarly constructed DataFrames.\n",
+    "            dfs.append(df)\n",
+    "        if dfs:\n",
+    "            # Concatenate all thus constructed DataFrames (i.e. stack on top of each other).\n",
+    "            df = pd.concat(dfs)\n",
+    "            df.sort_index(ascending=True, inplace=True)\n",
+    "\n",
+    "df['ID'] = df.reset_index().index+1\n",
     "df = df.set_index('ID', append=True)\n",
-    "        \n",
+    "\n",
+    "def link_code(url): return '<a target=\"_blank\" href=\"{}\">Code</a>'.format(url)\n",
+    "def link_details(url): return '<a target=\"_blank\" href=\"{}\">Details</a>'.format(url)\n",
+    "display_in_full(df.style.format({'Code': link_code, 'Details': link_details}))\n",
+    "\n",
+    "# Save as HTML.\n",
+    "html_filename = 'submissions_inference_0_5.html'\n",
+    "# df.to_html(html_filename)\n",
+    "with open(html_filename, 'w') as html_file:\n",
+    "    html = df.style.format({'Code': link_code, 'Details': link_details}).render()\n",
+    "    html_file.writelines(html)\n",
+    "    !mv $html_filename ~/Downloads"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Write CSV.\n",
     "# with open('dividiti-results.csv', 'w') as results_file:\n",
-    "#     results_file.write('\\n'.join(results))\n",
+    "#     results_file.write('\\n'.join(results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.style.format({'Code': link_code, 'Details': link_details}).render()\n",
+    "df = df.reset_index().set_index(['Division', 'Category'])\n",
+    "df.sort_index(ascending=True, inplace=True)\n",
     "\n",
-    "# Display DataFrame.\n",
-    "display_in_full(df.unstack(['Task', 'Scenario']))"
+    "# Create a Pandas Excel writer using XlsxWriter as the engine.\n",
+    "from pandas import ExcelWriter\n",
+    "excel_filename = 'submissions_inference_0_5.xlsx'\n",
+    "writer = ExcelWriter(excel_filename, engine='xlsxwriter') #, options={'strings_to_urls': True})\n",
+    "# Write closed and open results to separate sheets.\n",
+    "df.loc['closed'].to_excel(writer, sheet_name='Closed')\n",
+    "df.loc['open'].to_excel(writer, sheet_name='Open')\n",
+    "writer.save()\n",
+    "!mv $excel_filename ~/Downloads"
    ]
   }
  ],
