Cleanup results table generation.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -148,6 +148,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Metrics for DataFrame construction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Performance metrics: Stream in ms; MultiStream in #streams; Server in QPS; Offline in inputs/s).\n",
+    "performance_columns = [\n",
+    "    'P_{}_{}'.format(task, scenario)\n",
+    "    for task in ['IC1','IC2','OD1','OD2','NMT'] \n",
+    "    for scenario in ['SS','MS','S','O']\n",
+    "]\n",
+    "# Accuracy metrics: Image Classification in Top1, %; Object Detection in mAP, %; Machine Translation in BLUE.\n",
+    "accuracy_columns = [\n",
+    "    'A_{}_{}'.format(task, scenario)\n",
+    "    for task in ['IC1','IC2','OD1','OD2','NMT']\n",
+    "    for scenario in ['SS','MS','S','O']\n",
+    "]\n",
+    "# Score columns.\n",
+    "score_columns = performance_columns + accuracy_columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Non-imagenet benchmarks"
    ]
   },
@@ -279,7 +308,7 @@
     "# FOR EACH division.\n",
     "for division in divisions:\n",
     "    submitters_dir = os.path.join(results_path, division)\n",
-    "    #if division == 'open': continue\n",
+    "    # if division == 'open': continue\n",
     "    # FOR EACH submitter.\n",
     "    for submitter in os.listdir(submitters_dir):\n",
     "        if submitter not in [ 'dividiti' ]: continue # [ 'dividiti', 'Qualcomm' ]\n",
@@ -332,19 +361,8 @@
     "                notes = 'Median latency. MultiStream: Both Hexagon Vector Extensions (HVX) and Hexagon Tensor Accelerator (HTA).'\n",
     "            else:\n",
     "                raise Exception(\"Unsupported submitter '%'!\" % submitter)\n",
-    "                \n",
-    "            # Create DataFrame for each row of the final table based on the division, submitter and system.\n",
     "\n",
-    "            # Score metrics:\n",
-    "            # - performance: Stream in ms; MultiStream in #streams; Server in QPS; Offline in inputs/s).\n",
-    "            # - accuracy: Image Classification in Top1, %; Object Detection in mAP, %; Machine Translation in BLUE.\n",
-    "            score_columns = [\n",
-    "                '{}_{}_{}'.format(metric, task, scenario)\n",
-    "                for metric in ['P','A']\n",
-    "                for task in ['IC1','IC2','OD1','OD2','NMT']\n",
-    "                for scenario in ['SS','MS','S','O']\n",
-    "            ]\n",
-    "            \n",
+    "            # Create DataFrame for each row of the final table based on the division, submitter and system.\n",
     "            data = [{\n",
     "                # \n",
     "                'ID'            : '-', # TODO: Fill in later.\n",
@@ -366,9 +384,9 @@
     "                'FF_E'     : ff_e,\n",
     "                # Details. Code. Notes.\n",
     "                'Details'  : 'https://github.com/mlperf/submissions_inference_0_5/blob/master/{}/{}/systems/{}'. \\\n",
-    "                                format(division, submitter, system_json_name),\n",
+    "                                    format(division, submitter, system_json_name),\n",
     "                'Code'     : 'https://github.com/mlperf/submissions_inference_0_5/tree/master/{}/{}/code'. \\\n",
-    "                                format(division, submitter),\n",
+    "                                    format(division, submitter),\n",
     "                'Notes'    : notes,\n",
     "                # Misc.\n",
     "                'Division' : division,\n",
@@ -376,16 +394,14 @@
     "#                 'Task'     : task,\n",
     "#                 'Scenario' : scenario_to_str.get(scenario, scenario),\n",
     "            }]\n",
-    "            index = [\n",
-    "                'Division', 'Category', 'Submitter', 'System', 'Software', 'Benchmark' #  'Task', 'Scenario',\n",
-    "            ]\n",
     "            data[0].update({ score : '' for score in score_columns })\n",
-    "            \n",
+    "            index = [\n",
+    "                'Division', 'Category', 'Submitter', 'System', 'Software', 'Benchmark' #, 'Task', 'Scenario'\n",
+    "            ]\n",
     "            # FOR EACH benchmark.\n",
     "            for benchmark in os.listdir(system_dir):\n",
     "                if benchmark=='compliance_checker_log.txt': continue\n",
     "                benchmark_dir = os.path.join(system_dir, benchmark)\n",
-    "                \n",
     "                # Benchmark (with notes).\n",
     "                benchmark_dict = non_imagenet_benchmarks.get(benchmark)\n",
     "                if benchmark_dict:\n",
@@ -483,87 +499,42 @@
     "                # END OF FOR EACH scenario\n",
     "                # For open, construct a new DataFrame for each benchmark.\n",
     "                # Then, append to the list of similarly constructed DataFrames.\n",
-    "                if division == 'open':                        \n",
+    "                if division == 'open':\n",
     "                    df = pd.DataFrame(data)\n",
     "                    df = df.set_index(index)\n",
-    "                    dfs.append(df)                \n",
-    "            # END OF FOR EACH benchmark\n",
+    "                    dfs.append(df)\n",
+    "            # END OF FOR EACH benchmark            \n",
     "            # For closed, construct a new DataFrame for each system.\n",
     "            # Then, append to the list of similarly constructed DataFrames.\n",
     "            if division == 'closed':\n",
+    "                # For closed, multiple benchmarks can share the same row, so the Benchmark field can be misleading.\n",
+    "                if division == 'closed': data[0]['Benchmark'] = ''\n",
     "                df = pd.DataFrame(data)\n",
     "                df = df.set_index(index)\n",
     "                dfs.append(df)\n",
     "        # END OF FOR EACH system\n",
     "    # END OF FOR EACH submitter\n",
-    "\n",
-    "    # Concatenate all thus constructed DataFrames (i.e. stack on top of each other).\n",
-    "    df = pd.concat(dfs)\n",
-    "    df.sort_index(ascending=False, inplace=True)\n",
-    "    # Reset the index, but keep Division and Category there.\n",
-    "    df = df.reset_index(level=index[2:])\n",
-    "    # Mimic the official template.\n",
-    "    columns = [ 'ID', 'Submitter', 'System', 'Benchmark' ]\n",
-    "    columns += score_columns\n",
-    "    columns += [ 'Processor', 'Processor #', 'Accelerator', 'Accelerator #', 'Software',\n",
-    "                'FF_M', 'FF_D', 'FF_S', 'FF_E', 'Details', 'Code', 'Notes' ]\n",
-    "    df = df[columns]\n",
-    "    display_in_full(df)\n",
-    "\n",
     "# END OF FOR EACH division\n",
-    "print(len(dfs))\n",
     "\n",
-    "\n",
-    "# def link_code(url): return '<a target=\"_blank\" href=\"{}\">Code</a>'.format(url)\n",
-    "# def link_details(url): return '<a target=\"_blank\" href=\"{}\">Details</a>'.format(url)\n",
-    "# display_in_full(df.style.format({'Code': link_code, 'Details': link_details}))\n",
-    "\n",
-    "\n",
-    "# # Create a Pandas Excel writer using XlsxWriter as the engine.\n",
-    "# from pandas import ExcelWriter\n",
-    "# xlsx_filename = 'submissions_inference_0_5.xlsx'\n",
-    "# xlsx_writer = ExcelWriter(xlsx_filename, engine='xlsxwriter', options={'strings_to_urls': True})\n",
-    "# for division in df.index.unique(level='Division'):\n",
-    "#     df_d = df.loc[division]\n",
-    "#     for category in df_d.index.unique(level='Category'):\n",
-    "#         df_dc = df_d.loc[category]\n",
-    "#         if division == 'open':\n",
-    "#             df_xlsx = df_dc\n",
-    "#         elif division == 'closed':\n",
-    "#             # Show MobileNet and ResNet on the same row.\n",
-    "#             df_mobilenet = df_dc[df_dc['Benchmark']=='mobilenet (224x224)']\n",
-    "#             df_resnet    = df_dc[df_dc['Benchmark']=='resnet (224x224)']\n",
-    "#             df_joined    = df_mobilenet.assign(\n",
-    "#                 P_IC2_SS=df_resnet['P_IC2_SS'].values,\n",
-    "#                 A_IC2_MS=df_resnet['A_IC2_SS'].values,\n",
-    "# #                 P_IC2_MS=df_resnet['P_IC2_MS'].values,\n",
-    "# #                 A_IC2_SS=df_resnet['A_IC2_MS'].values,\n",
-    "# #                 P_IC2_S=df_resnet['P_IC2_S'].values,\n",
-    "# #                 A_IC2_S=df_resnet['A_IC2_S'].values,                \n",
-    "# #                 P_IC2_O=df_resnet['P_IC2_O'].values,\n",
-    "# #                 A_IC2_O=df_resnet['A_IC2_O'].values,\n",
-    "#             )\n",
-    "#             accuracy_columns = [\n",
-    "#                 'A_{}_{}'.format(task, scenario)\n",
-    "#                 for task in ['IC1','OD1','IC2','OD2','NMT']\n",
-    "#                 for scenario in ['SS','MS','S','O']\n",
-    "#             ]\n",
-    "#             df_xlsx = df_joined.drop(labels=['Benchmark']+accuracy_columns, axis=1)\n",
-    "#         else:\n",
-    "#             continue\n",
-    "#         # Write different division and category results to separate sheets. Omit index.\n",
-    "#         df_xlsx.to_excel(xlsx_writer, sheet_name='{}-{}'.format(division, category), index=False)\n",
-    "#         display_in_full(df_xlsx)\n",
-    "        \n",
-    "# xlsx_writer.save()\n",
-    "# !cp $xlsx_filename ~/Downloads"
+    "# Concatenate all thus constructed DataFrames (i.e. stack on top of each other).\n",
+    "df = pd.concat(dfs)\n",
+    "df.sort_index(ascending=False, inplace=True)\n",
+    "# Reset the index, but keep Division and Category there.\n",
+    "df = df.reset_index(level=index[2:])\n",
+    "# Mimic the official template.\n",
+    "columns = [ 'ID', 'Submitter', 'System', 'Benchmark' ]\n",
+    "columns += score_columns\n",
+    "columns += [ 'Processor', 'Processor #', 'Accelerator', 'Accelerator #', 'Software',\n",
+    "            'FF_M', 'FF_D', 'FF_S', 'FF_E', 'Details', 'Code', 'Notes' ]\n",
+    "df = df[columns]\n",
+    "# display_in_full(df)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Total number of results"
+    "### Total number of rows"
    ]
   },
   {
@@ -572,16 +543,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Should match the official table in the end.\n",
+    "print(\"#rows: %d\" % len(df))\n",
     "# Performance columns are strings for formatting reasons. Convert the strings to numbers (with NaNs for empty strings),\n",
     "# then count the numbers across the columns and finally sum.\n",
-    "df[performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum()"
+    "print(\"#results: %d\" % df[performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())\n",
+    "print(\"#results/open: %d\" % df.loc['open'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())\n",
+    "print(\"#results/closed: %d\" % df.loc['closed'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Total number of results across divisions"
+    "### Dump Excel"
    ]
   },
   {
@@ -590,7 +565,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc['closed'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum()"
+    "# Create a Pandas Excel writer using XlsxWriter as the engine.\n",
+    "from pandas import ExcelWriter\n",
+    "xlsx_filename = 'submissions_inference_0_5.xlsx'\n",
+    "xlsx_writer = ExcelWriter(xlsx_filename, engine='xlsxwriter', options={'strings_to_urls': True})\n",
+    "for division in df.index.unique(level='Division'):\n",
+    "    df_d = df.loc[division]\n",
+    "    for category in df_d.index.unique(level='Category'):\n",
+    "        df_dc = df_d.loc[category]\n",
+    "        if division == 'open':\n",
+    "            df_xlsx = df_dc\n",
+    "        elif division == 'closed':\n",
+    "            df_xlsx = df_dc.drop(labels=['Benchmark']+accuracy_columns, axis=1)\n",
+    "        else:\n",
+    "            continue\n",
+    "        # Write different division and category results to separate sheets. Omit index.\n",
+    "        df_xlsx.to_excel(xlsx_writer, sheet_name='{}-{}'.format(division, category), index=False)\n",
+    "        display_in_full(df_xlsx)\n",
+    "xlsx_writer.save()\n",
+    "!cp $xlsx_filename ~/Downloads"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Display HTML"
    ]
   },
   {
@@ -599,7 +599,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc['open'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum()"
+    "# df = df.set_index(['Submitter', 'System', 'Benchmark', 'Software'], append=True)\n",
+    "# def link_code(url): return '<a target=\"_blank\" href=\"{}\">Code</a>'.format(url)\n",
+    "# def link_details(url): return '<a target=\"_blank\" href=\"{}\">Details</a>'.format(url)\n",
+    "# display_in_full(df.style.format({'Code': link_code, 'Details': link_details}))"
    ]
   }
  ],
