Support submissions from DellEMC, Habana, Google, Intel.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -315,7 +315,7 @@
     "    # FOR EACH submitter.\n",
     "    for submitter in os.listdir(submitters_dir):\n",
     "#         if division == 'closed' and submitter not in [ 'NVIDIA', 'Qualcomm', 'Habana', 'Inspur', 'dividiti' ]: continue \n",
-    "        if division == 'closed' and submitter not in [ 'Alibaba' ]: continue\n",
+    "        if division == 'closed' and submitter not in [ 'Intel' ]: continue # [ 'Alibaba', 'DellEMC', 'Habana', 'Google' ]\n",
     "        systems_dir = os.path.join(submitters_dir, submitter, 'systems')\n",
     "        results_dir = os.path.join(submitters_dir, submitter, 'results')\n",
     "        # FOR EACH system.\n",
@@ -388,6 +388,19 @@
     "                ff_s = 'x'\n",
     "                if system_id == 'alibaba_cloud_t4':\n",
     "                    notes = 'ECC off'\n",
+    "            elif division == 'closed' and submitter == 'DellEMC':\n",
+    "                ff_s = 'x'\n",
+    "                if system_id == 'R740_T4x4_tensorrt':\n",
+    "                    notes = 'ECC off'\n",
+    "            elif division == 'closed' and submitter == 'Habana':\n",
+    "                ff_d = ff_s = ff_e = 'x'\n",
+    "            elif division == 'closed' and submitter == 'Google':\n",
+    "                ff_s = 'x'\n",
+    "            elif division == 'closed' and submitter == 'Intel':\n",
+    "                if system_id == 'ICL':\n",
+    "                    ff_m = 'x'\n",
+    "                else:\n",
+    "                    ff_s = 'x'\n",
     "            else:\n",
     "                raise Exception(\"Unsupported division/submitter combination '%s'/'%s'!\" % (division, submitter))\n",
     "\n",
@@ -462,8 +475,8 @@
     "\n",
     "                # FOR EACH scenario.\n",
     "                for scenario in os.listdir(benchmark_dir):\n",
-    "                    scenario_str = scenario_to_str[scenario]\n",
-    "#                     if scenario_str not in [ 'SingleStream', 'MultiStream', 'Server', 'Offline' ]: continue\n",
+    "                    scenario_str = scenario_to_str.get(scenario,'')\n",
+    "                    if scenario_str not in [ 'SingleStream', 'MultiStream', 'Server', 'Offline' ]: continue\n",
     "                    experiment_dir = os.path.join(benchmark_dir, scenario)\n",
     "                    if os.path.isfile(experiment_dir): # skip regular files like 'compliance_checker_log.txt'\n",
     "                        print(\"Warning: '%s' is a regular file, not a directory - skipping ...\" % experiment_dir)\n",
@@ -486,6 +499,7 @@
     "                        match = re.match('BLEU:\\s*(.+)', accuracy_line)\n",
     "                        accuracy = float(match.group(1))\n",
     "                    else:\n",
+    "                        pprint(accuracy_txt)\n",
     "                        raise Exception('Failed to extract accuracy information from \"%s\"' % accuracy_line)\n",
     "\n",
     "                    if scenario_str in [ 'SingleStream', 'MultiStream', 'Offline', 'Server' ]:\n",
